--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,6 @@
 ---
-# defaults file for ansible-role-healthchecks
+hc__email_port: 587
+hc__email_user: healthchecks
+hc__site_name: Healthchecks monitoring
+hc__db_user: postgres
+hc__db_name: hc
