--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,3 +4,4 @@ hc__email_user: healthchecks
 hc__site_name: Healthchecks monitoring
 hc__db_user: postgres
 hc__db_name: hc
+hc__enable_backups: true
