--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,16 @@
 ---
-# handlers file for ansible-role-healthchecks
+- name: start app
+  docker_service:
+    project_src: /opt/docker-healthchecks
+    pull: true
+    state: present
+  notify: disable backups
+
+- name: disable backups
+  docker_service:
+    project_src: /opt/docker-healthchecks
+    scale:
+      backups: 0
+    state: present
+  when: not hc__enable_backups
+
