--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,6 +4,8 @@
     project_src: /opt/docker-healthchecks
     pull: true
     state: present
+  # can't start docker containers within docker containers
+  when: not hc__testing
   notify: disable backups
 
 - name: disable backups
@@ -12,4 +14,4 @@
     scale:
       backups: 0
     state: present
-  when: not hc__enable_backups
+  when: not hc__enable_backups and not hc__testing
