--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -11,5 +11,20 @@
     - hc__su_email: test@example.org
     - hc__su_password: test
     - hc__su_username: test
+    - hc__testing: true
+  pre_tasks:
+    - name: Install pip
+      package:
+        name: python-pip
+        state: present
+
+    - name: Install pip deps
+      pip:
+        name: "{{ item }}"
+        state: present
+      with_items:
+        - docker
+        - docker-py
+        - docker-compose
   roles:
     - role: ansible-role-healthchecks
