--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,6 +9,7 @@ platforms:
   - name: instance
     image: geerlingguy/docker-ubuntu1604-ansible
     command: /sbin/init
+    privileged: true
     capabilities:
       - SYS_ADMIN
 provisioner:
