--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ jobs:
       install:
         - pip install ansible
         - pip install docker-py
-        - pip install molecule --pre
+        - pip install molecule
       script: molecule test
 
 notifications:
