--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,10 +8,12 @@ lint:
 platforms:
   - name: instance
     image: geerlingguy/docker-ubuntu1604-ansible
-    command: /sbin/init
+    command: /usr/lib/systemd/systemd
     capabilities:
       - SYS_ADMIN
-
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 provisioner:
   name: ansible
   lint:
