Don't start containers when testing

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,12 +8,9 @@ lint:
 platforms:
   - name: instance
     image: geerlingguy/docker-ubuntu1604-ansible
-    command: /usr/lib/systemd/systemd
+    command: /sbin/init
     capabilities:
       - SYS_ADMIN
-    privileged: true
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
 provisioner:
   name: ansible
   lint:
