--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ jobs:
         - pip install ansible
         - pip install docker-py
         - pip install molecule
-      script: molecule --debug test
+      script: molecule test
 
 notifications:
 webhooks: https://galaxy.ansible.com/api/v1/notifications/
